Update on Overleaf.

--- a/cv_olivia_guest.tex
+++ b/cv_olivia_guest.tex
@@ -267,20 +267,24 @@ Cooper, R. P., \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.cog
 \section{WORKSHOPS}
 
 \textbf{\href{http://www.software.ac.uk/rdvw/}{\textbf{Research Data Visualisation Workshop (RDVW)}}}
-\href{http://software.ac.uk/}{Software Sustainability Institute}, \href{http://www.manchester.ac.uk/}{University of Manchester} \hfill \textbf{28 Jul 2016}
+\begin{outerlist}
+\item[] \textit{\href{http://software.ac.uk/}{Software Sustainability Institute}, \href{http://www.manchester.ac.uk/}{University of Manchester}} \hfill \textbf{28 Jul 2016}
 \begin{innerlist}
  \item Organised 1-day workshop with \href{http://www.software.ac.uk/about/people/raniere-silva}{Raniere Silva} (main organiser) and \href{http://www.cardiff.ac.uk/people/view/98654-knight-vincent}{Vince Knight}.
  \item Member of \href{http://www.software.ac.uk/rdvw/committees}{steering committee}.
  \item Obtained funding from \href{https://www.rstudio.com/}{RStudio}.
 \end{innerlist}
+\end{outerlist}
 \vspace{10pt}
 
 \textbf{\href{https://sites.google.com/site/introcompcog/}{\textbf{Introduction to Computational Cognitive Modelling Workshop}}}
-\href{http://cccm.bbk.ac.uk/}{CCCM}, Birkbeck         \hfill \textbf{23-25 Apr 2014}
+\begin{outerlist}
+\item[] \textit{\href{http://cccm.bbk.ac.uk/}{CCCM}, Birkbeck}         \hfill \textbf{23-25 Apr 2014}
 \begin{innerlist}
  \item Organised 3-day workshop with \href{https://www.researchgate.net/profile/Chris_Brand}{Chris Brand} (co-organiser).
  \item Prepared slides, exercises, created website.
 \end{innerlist}
+\end{outerlist}
 
 \section{TEACHING}
 
