Update on Overleaf.

--- a/cv_olivia_guest.tex
+++ b/cv_olivia_guest.tex
@@ -76,8 +76,10 @@
 %
 % Place at top of document. It should be the first thing.
 \newcommand{\makeheading}[1]{
-\begin{center}\fontsize{35}{60}{\selectfont{\scshape\hspace{-16mm}#1}}\end{center}
+\begin{center}\hspace{-16mm}{\fontsize{35}{60}{\selectfont{\scshape#1}}}\end{center}
+
 \vspace{10pt}
+
 }
 
 \renewcommand{\section}[2]%
