--- a/cv_olivia_guest.tex
+++ b/cv_olivia_guest.tex
@@ -128,7 +128,7 @@
 \end{minipage}
 \begin{minipage}{.49\textwidth}
 \begin{description}
- \item[Github:] \href{https://github.com/oliviaguest}{oliviaguest}
+ \item[GitHub:] \href{https://github.com/oliviaguest}{oliviaguest}
  \item[Twitter:] \href{https://twitter.com/o_guest}{@o\textunderscore guest}
  \item[OSF:] \href{https://osf.io/38p75/}{Olivia Guest}
  \item[ORCiD:] \href{http://orcid.org/0000-0002-1891-0972}{0000-0002-1891-0972}
