Update on Overleaf.

--- a/cv_olivia_guest.tex
+++ b/cv_olivia_guest.tex
@@ -119,18 +119,18 @@
 \section{CONTACT}
 
 \begin{minipage}{.49\textwidth}
-\textbf{Phone:} (+44) (0)7842868199 (UK)
 \begin{description}
+ \item [Phone:] (+44) (0)7842868199 (UK)
  \item[Email:] \href{mailto:contact@oliviaguest.com}{contact@oliviaguest.com}
  \item[Website:] \href{http://oliviaguest.com}{oliviaguest.com}
- \item[Address:] South Parks Rd, OX1 3UD
+% \item[Address:] South Parks Rd, OX1 3UD
  \end{description}
 \end{minipage}
 \begin{minipage}{.49\textwidth}
 \begin{description}
  \item[GitHub:] \href{https://github.com/oliviaguest}{oliviaguest}
  \item[Twitter:] \href{https://twitter.com/o_guest}{@o\textunderscore guest}
- \item[OSF:] \href{https://osf.io/38p75/}{Olivia Guest}
+% \item[OSF:] \href{https://osf.io/38p75/}{Olivia Guest}
  \item[ORCID:] \href{http://orcid.org/0000-0002-1891-0972}{0000-0002-1891-0972}
  \end{description}
 \end{minipage}
@@ -146,7 +146,7 @@
 
 \textbf{\href{http://www.psy.ox.ac.uk/}{Department of Experimental Psychology}, University of Oxford, UK}
 \begin{outerlist}
-\item[\textit{Postdoctoral Researcher}] \hfill \textbf{2014-}
+\item[\textit{Postdoctoral Researcher}] \hfill \textbf{2014-2016}
 
 \begin{innerlist}
 \item Created models for category learning in infancy.
@@ -170,13 +170,16 @@
 
 \section{PUBLICATIONS}
 
-\textbf{Guest, O.}, Love, B. C. (in prep). What the Success of Brain Imaging Implies about the Neural Code.
+\textbf{Guest, O.}, Love, B. C. (in press). What the Success of Brain Imaging Implies about the Neural Code.
+\vspace{5pt}
+
+\textbf{Guest, O.}, Caso, A., Cooper, R. P. (in prep). On Simulating Neural Damage in Connectionist Networks.
 \vspace{5pt}
 
 \textbf{Guest, O.}, Cooper, R. P. (in prep). Re-evaluating Computational Models of Semantic Deficits.
 \vspace{5pt}
 
-\textbf{Guest, O.}, Rougier, N. P. (in press). What is computational reproducibility? \textit{IEEE CIS Newsletter on Cognitive and Developmental Systems.} [\href{https://www.overleaf.com/read/nsndhzbpvwky}{preprint}]
+\textbf{Guest, O.}, Rougier, N. P. (2016). \href{http://oliviaguest.com/doc/guest_rougier_16.pdf}{What is computational reproducibility?} \textit{\href{http://openlab-flowers.inria.fr/uploads/default/original/1X/8772fe3ca3c74b838e0e8161c3fb24dafdf1c368.pdf}{IEEE CIS Newsletter on Cognitive and Developmental Systems}}, 13 (1).
 \vspace{5pt}
 
 \textbf{Guest, O.} (2016). \href{http://dx.doi.org/10.15200/winn.146590.01538}{Crisis in What Exactly?}. \textit{The Winnower}. 
