Minor typographical fixes
* The usual formatting for eleven-digit UK telephone numbers is to
  include a space between the area code and the six-digit subscriber
  code.  (I work in telecoms. =P)
* The en dash is preferred for ranges in some style guides; depends
  on which you're using.  This is the double dash in LaTeX.
  Ref: https://en.wikipedia.org/wiki/Dash#En_dash
* Improve the rendering of "C++".

--- a/cv_olivia_guest.tex
+++ b/cv_olivia_guest.tex
@@ -120,7 +120,7 @@
 
 \begin{minipage}{.49\textwidth}
 \begin{description}
- \item [Phone:] (+44) (0)7842868199 (UK)
+ \item [Phone:] (+44) (0)7842 868199 (UK)
  \item[Email:] \href{mailto:contact@oliviaguest.com}{contact@oliviaguest.com}
  \item[Website:] \href{http://oliviaguest.com}{oliviaguest.com}
 % \item[Address:] South Parks Rd, OX1 3UD
@@ -138,15 +138,15 @@
 
 \section{PROFESSIONAL EXPERIENCE}
 
-\textbf{\href{http://rescience.github.io/}{ReScience Journal}} --- \textit{Associate Editor} \hfill \textbf{2016-}
+\textbf{\href{http://rescience.github.io/}{ReScience Journal}} --- \textit{Associate Editor} \hfill \textbf{2016--}
 \vspace{10pt}
 
-\textbf{\href{http://www.software.ac.uk/}{Software Sustainability Institute}, UK} ---  \textit{Fellow 2016}  \hfill \textbf{2016-}
+\textbf{\href{http://www.software.ac.uk/}{Software Sustainability Institute}, UK} ---  \textit{Fellow 2016}  \hfill \textbf{2016--}
 \vspace{10pt}
 
 \textbf{\href{http://www.psy.ox.ac.uk/}{Department of Experimental Psychology}, University of Oxford, UK}
 \begin{outerlist}
-\item[\textit{Postdoctoral Researcher}] \hfill \textbf{2014-2016}
+\item[\textit{Postdoctoral Researcher}] \hfill \textbf{2014--2016}
 
 \begin{innerlist}
 \item Created models for category learning in infancy.
@@ -158,7 +158,7 @@
 
 \textbf{\href{http://www.bbk.ac.uk/psychology/}{\textbf{Department of Psychological Sciences}}, \href{http://www.bbk.ac.uk/}{Birkbeck}, UK}
 \begin{outerlist}
-\item[\textit{Graduate Teaching Assistant}] \hfill \textbf{2010-2014}
+\item[\textit{Graduate Teaching Assistant}] \hfill \textbf{2010--2014}
 
 \begin{innerlist}
 \item Taught on a range of courses within psychological sciences.
@@ -188,17 +188,17 @@
 Love, B. C., Kopeć, Ł., \textbf{Guest, O.} (2015). \href{http://dx.doi.org/10.1371/journal.pone.0137685}{Optimism Bias in Fans and Sports Reporters}. \textit{PLoS ONE}, 10 (9).
 \vspace{5pt}
 
-Cooper, R. P., \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.cogsys.2013.05.001}{Implementations are not specifications: specification, replication and experimentation in computational cognitive modeling}. \textit{Cognitive Systems Research}, 27, 42-49.
+Cooper, R. P., \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.cogsys.2013.05.001}{Implementations are not specifications: specification, replication and experimentation in computational cognitive modeling}. \textit{Cognitive Systems Research}, 27, 42--49.
 \vspace{5pt}
 
-\textbf{Guest, O.}, Cooper, R. P., Davelaar, E. J. (2014).  [High-Level Cognition]. \href{http://oliviaguest.com/doc/guest_14.pdf}{The Influence of Implementation on ``Hub'' Models of Semantic Cognition}. In J. Mayor, P. Gomez (Eds.), \textit{\href{http://www.worldscientific.com/worldscibooks/10.1142/8747}{Computational Models of Cognitive Processes}} (pp. 155-169). World Scientific.
+\textbf{Guest, O.}, Cooper, R. P., Davelaar, E. J. (2014).  [High-Level Cognition]. \href{http://oliviaguest.com/doc/guest_14.pdf}{The Influence of Implementation on ``Hub'' Models of Semantic Cognition}. In J. Mayor, P. Gomez (Eds.), \textit{\href{http://www.worldscientific.com/worldscibooks/10.1142/8747}{Computational Models of Cognitive Processes}} (pp. 155--169). World Scientific.
 \vspace{5pt}
 
-\textbf{Guest, O.}, Cooper, R. P., Davelaar, E. J. (2012). \href{http://eprints.bbk.ac.uk/6758/}{Semantic Cognition: A Re-examination of the Recurrent Network ``Hub'' Model}. \textit{In Proceedings of the Ninth International Conference on Cognitive Modelling.} Berlin, Germany. April. (pp. 259-264). Berlin, Germany. April. Universit\"{a}tsverlag der TU Berlin.
+\textbf{Guest, O.}, Cooper, R. P., Davelaar, E. J. (2012). \href{http://eprints.bbk.ac.uk/6758/}{Semantic Cognition: A Re-examination of the Recurrent Network ``Hub'' Model}. \textit{In Proceedings of the Ninth International Conference on Cognitive Modelling.} Berlin, Germany. April. (pp. 259--264). Berlin, Germany. April. Universit\"{a}tsverlag der TU Berlin.
 
 \section{EDUCATION}
 
-\textbf{\href{http://www.bbk.ac.uk/}{\textbf{Birkbeck}}, UK} \hfill \textbf{2010-2014}
+\textbf{\href{http://www.bbk.ac.uk/}{\textbf{Birkbeck}}, UK} \hfill \textbf{2010--2014}
 \begin{outerlist}
  \item[Ph.D., Psychological Sciences,] Sep 2014
         \begin{innerlist}
@@ -209,7 +209,7 @@ Cooper, R. P., \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.cog
 \end{outerlist}
 \vspace{10pt}
 
-\textbf{\href{http://www.ucl.ac.uk/}{\textbf{University College London}}, UK} \hfill \textbf{2009-2010}
+\textbf{\href{http://www.ucl.ac.uk/}{\textbf{University College London}}, UK} \hfill \textbf{2009--2010}
 \begin{outerlist}
  \item[M.Sc., \href{http://www.ucl.ac.uk/lifesciences-faculty/degree-programmes/cognitive-decision-sciences}{Cognitive and Decision Sciences} (Distinction),] Sep 2010
         \begin{innerlist}
@@ -219,7 +219,7 @@ Cooper, R. P., \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.cog
 \end{outerlist}
 \vspace{10pt}
 
-\textbf{\href{http://www.york.ac.uk/}{\textbf{The University of York}}, UK} \hfill \textbf{2006-2009}
+\textbf{\href{http://www.york.ac.uk/}{\textbf{The University of York}}, UK} \hfill \textbf{2006--2009}
 \begin{outerlist}
 \item[B.Sc., \href{http://www.cs.york.ac.uk/} {Computer Science},] Jun 2009
         \begin{innerlist}
@@ -232,7 +232,7 @@ Cooper, R. P., \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.cog
 
 \textbf{\href{http://www.cogs.indiana.edu/asic/2016/index.shtml}{\textbf{ 15th Annual Summer Interdisciplinary Conference (ASIC 2016)}}}
 \begin{outerlist}
-\item[] \textit{Selva, Val Gardena, Italy}\hfill\textbf{3-8 Jul 2016}
+\item[] \textit{Selva, Val Gardena, Italy}\hfill\textbf{3--8 Jul 2016}
 \begin{innerlist}
 \item Talk: \textit{What the Success of Brain Imaging Implies about the Neural Code}.
 \end{innerlist}
@@ -241,7 +241,7 @@ Cooper, R. P., \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.cog
 
 \textbf{\href{http://www.cogs.indiana.edu/asic/2015/index.shtml}{\textbf{ 14th Annual Summer Interdisciplinary Conference (ASIC 2015)}}}
 \begin{outerlist}
-\item[] \textit{Mammoth Lakes, California, USA}\hfill\textbf{10-15 Jul 2015}
+\item[] \textit{Mammoth Lakes, California, USA}\hfill\textbf{10--15 Jul 2015}
 \begin{innerlist}
 \item Talk: \textit{Optimism Bias in Novice and Expert Sport Forecasting}.
 \end{innerlist}
@@ -250,7 +250,7 @@ Cooper, R. P., \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.cog
 
 \textbf{\href{http://www.bcbl.eu/events/ncpw13/}{\textbf{13th Neural Computation and Psychology Workshop (NCPW 13)}}}
 \begin{outerlist}
-\item[] \textit{\href{http://www.bcbl.eu/}{BCBL}, San Sebastian, Spain}\hfill\textbf{12-14 Jul 2012}
+\item[] \textit{\href{http://www.bcbl.eu/}{BCBL}, San Sebastian, Spain}\hfill\textbf{12--14 Jul 2012}
 \begin{innerlist}
 \item Talk: \textit{Exploring the influence of architecture and learning algorithm on the breakdown of the ``hub'' model of semantic cognition}.
 \end{innerlist}
@@ -260,7 +260,7 @@ Cooper, R. P., \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.cog
 \textbf{\href{http://iccm-conference.org/2012/}{\textbf{11th International Conference on Cognitive Modeling (ICCM 2012)}}}
 \begin{outerlist}
 \item[] \textit{\href{http://www.tu-berlin.de/menue/home/parameter/en/}{Technische Universit\"{a}t Berlin}, Berlin, Germany}
-        \hfill \textbf{12-15 Apr 2012}
+        \hfill \textbf{12--15 Apr 2012}
 \begin{innerlist}
 \item Poster: \textit{Semantic Cognition: A Re-examination of the Recurrent Network ``Hub'' Model}.
 \item Won best student poster prize (\euro 100).
@@ -282,7 +282,7 @@ Cooper, R. P., \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.cog
 
 \textbf{\href{https://sites.google.com/site/introcompcog/}{\textbf{Introduction to Computational Cognitive Modelling Workshop}}}
 \begin{outerlist}
-\item[] \textit{\href{http://cccm.bbk.ac.uk/}{CCCM}, Birkbeck}         \hfill \textbf{23-25 Apr 2014}
+\item[] \textit{\href{http://cccm.bbk.ac.uk/}{CCCM}, Birkbeck}         \hfill \textbf{23--25 Apr 2014}
 \begin{innerlist}
  \item Organised 3-day workshop with \href{https://www.researchgate.net/profile/Chris_Brand}{Chris Brand} (co-organiser).
  \item Prepared slides, exercises, created website.
@@ -293,7 +293,7 @@ Cooper, R. P., \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.cog
 
 \textbf{\href{http://www.psy.ox.ac.uk/}{\textbf{Department of Experimental Psychology}}, \href{http://ox.ac.uk/}{University of Oxford}, UK}
   \begin{outerlist}
-  \item[Postdoctoral Research Assistant] \hfill \textbf{2014-}
+  \item[Postdoctoral Research Assistant] \hfill \textbf{2014--}
   \item[\textit{\href{http://oliviaguest.com/connectionism}{Block Practical: Connectionist Models and Cognitive Processes}}] \
   \begin{innerlist}
   \item Module: \textit{Third Year, B.Sc.}
@@ -312,7 +312,7 @@ Cooper, R. P., \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.cog
 \textbf{\href{http://www.bbk.ac.uk/psychology/}{\textbf{Department of Psychological Sciences}}, \href{http://www.bbk.ac.uk/}{Birkbeck, University of London},
 UK}
 \begin{outerlist}
- \item[Graduate Teaching Assistant] \hfill \textbf{2010-2014}
+ \item[Graduate Teaching Assistant] \hfill \textbf{2010--2014}
  \item Modules Taught: \textit{General Foundations of Psychology,
  Psychobiology, Advanced Research Methods, Advanced Quantitative Methods, Memory and Cognition, Matlab Programming for Psychological Science, }
 \end{outerlist}
@@ -341,6 +341,9 @@ UK}
 \textbf{General:} \href{http://oliviaguest.com/license/}{Website design} (HTML, CSS, CMS, Jekyll, Liquid, YAML); Graphic design (Adobe CS); GUI design (PyGTK, GTK+).
 \vspace{10pt}
 
-\textbf{Programming:} Ada, C, C$++$, C\#, Java, JavaScript, \LaTeX, MATLAB,  OpenGL, Pascal, PHP, Prolog, Python, R, Scheme, SQL, Visual Basic.
+% Adapted from http://tex.stackexchange.com/a/4304/9668
+\newcommand{\CC}{C\nolinebreak\hspace{.02em}+\nolinebreak\hspace{0.04em}+}
+
+\textbf{Programming:} Ada, C, \CC, C\#, Java, JavaScript, \LaTeX, MATLAB,  OpenGL, Pascal, PHP, Prolog, Python, R, Scheme, SQL, Visual Basic.
 \end{document}
 %%%%%%%%%%%%%%%%%%%%%%%%%% End CV Document %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
