Remove some redundant use of `\textbf{}`
Using `\textbf{}` within another `\textbf{}` has no effect except
to make the source code harder to read.  Removing the duplicates
has no effect on the printed document.

Additionally, remove a leading space in the name of the first two
conferences that was causing them to be out of line with the rest.

--- a/cv_olivia_guest.tex
+++ b/cv_olivia_guest.tex
@@ -156,7 +156,7 @@
 \end{outerlist}
 \vspace{10pt}
 
-\textbf{\href{http://www.bbk.ac.uk/psychology/}{\textbf{Department of Psychological Sciences}}, \href{http://www.bbk.ac.uk/}{Birkbeck}, UK}
+\textbf{\href{http://www.bbk.ac.uk/psychology/}{Department of Psychological Sciences}, \href{http://www.bbk.ac.uk/}{Birkbeck}, UK}
 \begin{outerlist}
 \item[\textit{Graduate Teaching Assistant}] \hfill \textbf{2010--2014}
 
@@ -198,7 +198,7 @@ Cooper, R. P., \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.cog
 
 \section{EDUCATION}
 
-\textbf{\href{http://www.bbk.ac.uk/}{\textbf{Birkbeck}}, UK} \hfill \textbf{2010--2014}
+\textbf{\href{http://www.bbk.ac.uk/}{Birkbeck}, UK} \hfill \textbf{2010--2014}
 \begin{outerlist}
  \item[Ph.D., Psychological Sciences,] Sep 2014
         \begin{innerlist}
@@ -209,7 +209,7 @@ Cooper, R. P., \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.cog
 \end{outerlist}
 \vspace{10pt}
 
-\textbf{\href{http://www.ucl.ac.uk/}{\textbf{University College London}}, UK} \hfill \textbf{2009--2010}
+\textbf{\href{http://www.ucl.ac.uk/}{University College London}, UK} \hfill \textbf{2009--2010}
 \begin{outerlist}
  \item[M.Sc., \href{http://www.ucl.ac.uk/lifesciences-faculty/degree-programmes/cognitive-decision-sciences}{Cognitive and Decision Sciences} (Distinction),] Sep 2010
         \begin{innerlist}
@@ -219,7 +219,7 @@ Cooper, R. P., \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.cog
 \end{outerlist}
 \vspace{10pt}
 
-\textbf{\href{http://www.york.ac.uk/}{\textbf{The University of York}}, UK} \hfill \textbf{2006--2009}
+\textbf{\href{http://www.york.ac.uk/}{The University of York}, UK} \hfill \textbf{2006--2009}
 \begin{outerlist}
 \item[B.Sc., \href{http://www.cs.york.ac.uk/} {Computer Science},] Jun 2009
         \begin{innerlist}
@@ -230,7 +230,7 @@ Cooper, R. P., \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.cog
 
 \section{CONFERENCES}
 
-\textbf{\href{http://www.cogs.indiana.edu/asic/2016/index.shtml}{\textbf{ 15th Annual Summer Interdisciplinary Conference (ASIC 2016)}}}
+\textbf{\href{http://www.cogs.indiana.edu/asic/2016/index.shtml}{15th Annual Summer Interdisciplinary Conference (ASIC 2016)}}
 \begin{outerlist}
 \item[] \textit{Selva, Val Gardena, Italy}\hfill\textbf{3--8 Jul 2016}
 \begin{innerlist}
@@ -239,7 +239,7 @@ Cooper, R. P., \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.cog
 \end{outerlist}
 \vspace{10pt}
 
-\textbf{\href{http://www.cogs.indiana.edu/asic/2015/index.shtml}{\textbf{ 14th Annual Summer Interdisciplinary Conference (ASIC 2015)}}}
+\textbf{\href{http://www.cogs.indiana.edu/asic/2015/index.shtml}{14th Annual Summer Interdisciplinary Conference (ASIC 2015)}}
 \begin{outerlist}
 \item[] \textit{Mammoth Lakes, California, USA}\hfill\textbf{10--15 Jul 2015}
 \begin{innerlist}
@@ -248,7 +248,7 @@ Cooper, R. P., \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.cog
 \end{outerlist}
 \vspace{10pt}
 
-\textbf{\href{http://www.bcbl.eu/events/ncpw13/}{\textbf{13th Neural Computation and Psychology Workshop (NCPW 13)}}}
+\textbf{\href{http://www.bcbl.eu/events/ncpw13/}{13th Neural Computation and Psychology Workshop (NCPW 13)}}
 \begin{outerlist}
 \item[] \textit{\href{http://www.bcbl.eu/}{BCBL}, San Sebastian, Spain}\hfill\textbf{12--14 Jul 2012}
 \begin{innerlist}
@@ -257,7 +257,7 @@ Cooper, R. P., \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.cog
 \end{outerlist}
 \vspace{10pt}
 
-\textbf{\href{http://iccm-conference.org/2012/}{\textbf{11th International Conference on Cognitive Modeling (ICCM 2012)}}}
+\textbf{\href{http://iccm-conference.org/2012/}{11th International Conference on Cognitive Modeling (ICCM 2012)}}
 \begin{outerlist}
 \item[] \textit{\href{http://www.tu-berlin.de/menue/home/parameter/en/}{Technische Universit\"{a}t Berlin}, Berlin, Germany}
         \hfill \textbf{12--15 Apr 2012}
@@ -269,7 +269,7 @@ Cooper, R. P., \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.cog
 
 \section{WORKSHOPS}
 
-\textbf{\href{http://www.software.ac.uk/rdvw/}{\textbf{Research Data Visualisation Workshop (RDVW)}}}
+\textbf{\href{http://www.software.ac.uk/rdvw/}{Research Data Visualisation Workshop (RDVW)}}
 \begin{outerlist}
 \item[] \textit{\href{http://software.ac.uk/}{Software Sustainability Institute}, \href{http://www.manchester.ac.uk/}{University of Manchester}} \hfill \textbf{28 Jul 2016}
 \begin{innerlist}
@@ -280,7 +280,7 @@ Cooper, R. P., \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.cog
 \end{outerlist}
 \vspace{10pt}
 
-\textbf{\href{https://sites.google.com/site/introcompcog/}{\textbf{Introduction to Computational Cognitive Modelling Workshop}}}
+\textbf{\href{https://sites.google.com/site/introcompcog/}{Introduction to Computational Cognitive Modelling Workshop}}
 \begin{outerlist}
 \item[] \textit{\href{http://cccm.bbk.ac.uk/}{CCCM}, Birkbeck}         \hfill \textbf{23--25 Apr 2014}
 \begin{innerlist}
@@ -291,7 +291,7 @@ Cooper, R. P., \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.cog
 
 \section{TEACHING}
 
-\textbf{\href{http://www.psy.ox.ac.uk/}{\textbf{Department of Experimental Psychology}}, \href{http://ox.ac.uk/}{University of Oxford}, UK}
+\textbf{\href{http://www.psy.ox.ac.uk/}{Department of Experimental Psychology}, \href{http://ox.ac.uk/}{University of Oxford}, UK}
   \begin{outerlist}
   \item[Postdoctoral Research Assistant] \hfill \textbf{2014--}
   \item[\textit{\href{http://oliviaguest.com/connectionism}{Block Practical: Connectionist Models and Cognitive Processes}}] \
@@ -309,7 +309,7 @@ Cooper, R. P., \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.cog
   \end{outerlist}
 \vspace{10pt}
 
-\textbf{\href{http://www.bbk.ac.uk/psychology/}{\textbf{Department of Psychological Sciences}}, \href{http://www.bbk.ac.uk/}{Birkbeck, University of London},
+\textbf{\href{http://www.bbk.ac.uk/psychology/}{Department of Psychological Sciences}, \href{http://www.bbk.ac.uk/}{Birkbeck, University of London},
 UK}
 \begin{outerlist}
  \item[Graduate Teaching Assistant] \hfill \textbf{2010--2014}
@@ -319,13 +319,13 @@ UK}
 
 \section{MEDIA OUTREACH}
 
-\textbf{\href{http://www.bbc.co.uk/radio4}{\textbf{BBC Radio 4:}}} \href{http://www.bbc.co.uk/programmes/b0713zdz}{Today Show} \hfill\textbf{22 Feb 2016}
+\textbf{\href{http://www.bbc.co.uk/radio4}{BBC Radio 4:}} \href{http://www.bbc.co.uk/programmes/b0713zdz}{Today Show} \hfill\textbf{22 Feb 2016}
 \begin{innerlist}
 \item Interview: \textit{What can we learn in 4 months?}
 \end{innerlist}
 \vspace{10pt}
 
-\textbf{\href{http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0137685}{\textbf{Optimism Bias in Fans and Sports Reporters}}} \hfill\textbf{9 Sep 2015}
+\textbf{\href{http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0137685}{Optimism Bias in Fans and Sports Reporters}} \hfill\textbf{9 Sep 2015}
 \begin{innerlist}
 \item Press Releases: \href{http://www.ox.ac.uk/news/2015-09-09-nfl-fans-and-espn-reporters-overly-optimistic-about-team-prospects}{University of Oxford}, \href{https://www.ucl.ac.uk/news/news-articles/0915/100915-nfl-team-prospects}{UCL}
 \item Media Coverage: \href{http://www.csmonitor.com/Science/2015/0909/NFL-scores-Your-team-is-probably-less-invincible-than-you-imagine}{CS Monitor},
