Update on Overleaf.

--- a/cv_olivia_guest.tex
+++ b/cv_olivia_guest.tex
@@ -144,6 +144,12 @@
 \textbf{\href{http://www.software.ac.uk/}{Software Sustainability Institute}, UK} ---  \textit{Fellow 2016}  \hfill \textbf{2016--}
 \vspace{10pt}
 
+\textbf{\href{https://www.ucl.ac.uk/pals/research/experimental-psychology/}{Department of Experimental Psychology}, University College London, UK}
+\begin{outerlist}
+\item[\textit{Postdoctoral Researcher}] \hfill \textbf{2016--}
+\end{outerlist}
+\vspace{10pt}
+
 \textbf{\href{http://www.psy.ox.ac.uk/}{Department of Experimental Psychology}, University of Oxford, UK}
 \begin{outerlist}
 \item[\textit{Postdoctoral Researcher}] \hfill \textbf{2014--2016}
@@ -170,18 +176,13 @@
 
 \section{PUBLICATIONS}
 
-\textbf{Guest, O.}, Love, B. C. (in prep). What the Success of Brain Imaging Implies about the Neural Code.
-
-Preprint: bioRxiv 071076. doi: \href{http://dx.doi.org/10.1101/071076}{http://dx.doi.org/10.1101/071076}.
-\vspace{5pt}
-
 \textbf{Guest, O.}, Caso, A., Cooper, R. P. (in prep). On Simulating Neural Damage in Connectionist Networks.
 \vspace{5pt}
 
-\textbf{Guest, O.}, Cooper, R. P. (in prep). Re-evaluating Computational Models of Semantic Deficits.
+\textbf{Guest, O.}, Love, B. C. (2017). \href{http://dx.d.oi.org/10.7554/eLife.21397}{What the Success of Brain Imaging Implies about the Neural Code}. \textit{eLife}, 6:e21397.
 \vspace{5pt}
 
-\textbf{Guest, O.}, Rougier, N. P. (2016). \href{http://oliviaguest.com/doc/guest_rougier_16.pdf}{What is computational reproducibility?} \textit{\href{http://openlab-flowers.inria.fr/uploads/default/original/1X/8772fe3ca3c74b838e0e8161c3fb24dafdf1c368.pdf}{IEEE CIS Newsletter on Cognitive and Developmental Systems}}, 13 (1).
+\textbf{Guest, O.}, Rougier, N. P. (2016). \href{http://oliviaguest.com/doc/guest_rougier_16.pdf}{What is computational reproducibility?} \textit{IEEE CIS Newsletter on Cognitive and Developmental Systems}, 13 (1).
 \vspace{5pt}
 
 \textbf{Guest, O.} (2016). \href{http://dx.doi.org/10.15200/winn.146590.01538}{Crisis in What Exactly?}. \textit{The Winnower}. 
@@ -224,10 +225,6 @@ Cooper, R. P., \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.cog
 \textbf{\href{http://www.york.ac.uk/}{The University of York}, UK} \hfill \textbf{2006--2009}
 \begin{outerlist}
 \item[B.Sc., \href{http://www.cs.york.ac.uk/} {Computer Science},] Jun 2009
-        \begin{innerlist}
-        \item Thesis: \emph{Modelling Genetic Adaptation to Environmental Changes}
-	\item Supervisor: \emph{Suresh Manandhar}
-        \end{innerlist}
 \end{outerlist}
 
 \section{CONFERENCES}
