Update on Overleaf.

--- a/cv_olivia_guest.tex
+++ b/cv_olivia_guest.tex
@@ -176,9 +176,6 @@
 
 \section{PUBLICATIONS}
 
-\textbf{Guest, O.}, Caso, A., Cooper, R. P. (in prep). On Simulating Neural Damage in Connectionist Networks.
-\vspace{5pt}
-
 \textbf{Guest, O.}, Love, B. C. (2017). \href{http://dx.d.oi.org/10.7554/eLife.21397}{What the Success of Brain Imaging Implies about the Neural Code}. \textit{eLife}, 6:e21397.
 \vspace{5pt}
 
@@ -263,6 +260,34 @@ Cooper, R. P., \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.cog
 \begin{innerlist}
 \item Poster: \textit{Semantic Cognition: A Re-examination of the Recurrent Network ``Hub'' Model}.
 \item Won best student poster prize (\euro 100).
+\end{innerlist}
+\end{outerlist}
+
+\section{INVITED TALKS}
+
+\textbf{\href{http://www.ru.nl/cls/}{Centre for Language Studies}}
+\begin{outerlist}
+\item[] \textit{Radboud University, The Netherlands}\hfill\textbf{8 Mar 2017}
+\begin{innerlist}
+\item Talk: \textit{\href{https://figshare.com/articles/What_the_Success_of_Brain_Imaging_Implies_about_the_Neural_Code/4252022}{What the Success of Brain Imaging Implies about the Neural Code}}.
+\end{innerlist}
+\end{outerlist}
+\vspace{10pt}
+
+\textbf{\href{http://ljdm.info}{London Judgement and Decision Making Seminars}}
+\begin{outerlist}
+\item[] \textit{University College London, UK}\hfill\textbf{8 Feb 2017}
+\begin{innerlist}
+\item Talk: \textit{\href{https://figshare.com/articles/What_the_Success_of_Brain_Imaging_Implies_about_the_Neural_Code/4252022}{What the Success of Brain Imaging Implies about the Neural Code}}.
+\end{innerlist}
+\end{outerlist}
+\vspace{10pt}
+
+\textbf{\href{http://decisions.psy.ox.ac.uk/}{Summerfield Lab}}
+\begin{outerlist}
+\item[] \textit{University of Oxford, UK}\hfill\textbf{23 Nov 2016}
+\begin{innerlist}
+\item Talk: \textit{\href{https://figshare.com/articles/What_the_Success_of_Brain_Imaging_Implies_about_the_Neural_Code/4252022}{What the Success of Brain Imaging Implies about the Neural Code}}.
 \end{innerlist}
 \end{outerlist}
 
