Update on Overleaf.

--- a/cv_olivia_guest.tex
+++ b/cv_olivia_guest.tex
@@ -120,10 +120,10 @@
 
 \begin{minipage}{.49\textwidth}
 \begin{description}
- \item [Phone:] +44 7842 868199 (UK)
+%  \item [Phone:] +44 7842 868199 (UK)
  \item[Email:] \href{mailto:contact@oliviaguest.com}{contact@oliviaguest.com}
  \item[Website:] \href{http://oliviaguest.com}{oliviaguest.com}
-% \item[Address:] South Parks Rd, OX1 3UD
+ \item[Blog:] \href{http://neuroplausible.com}{neuroplausible.com}
  \end{description}
 \end{minipage}
 \begin{minipage}{.49\textwidth}
