Update on Overleaf.

--- a/cv_olivia_guest.tex
+++ b/cv_olivia_guest.tex
@@ -138,16 +138,17 @@
 
 \section{PROFESSIONAL EXPERIENCE}
 
-\textbf{\href{http://rescience.github.io/}{ReScience Journal}} --- \textit{Associate Editor} \hfill \textbf{2016--}
-\vspace{10pt}
-
-\textbf{\href{http://www.software.ac.uk/}{Software Sustainability Institute}, UK} ---  \textit{Fellow 2016}  \hfill \textbf{2016--}
-\vspace{10pt}
 
 \textbf{\href{https://www.ucl.ac.uk/pals/research/experimental-psychology/}{Department of Experimental Psychology}, University College London, UK}
 \begin{outerlist}
 \item[\textit{Postdoctoral Researcher}] \hfill \textbf{2016--}
 \end{outerlist}
+\vspace{10pt}
+
+\textbf{\href{http://rescience.github.io/}{ReScience Journal}} --- \textit{Associate Editor} \hfill \textbf{2016--}
+\vspace{10pt}
+
+\textbf{\href{http://www.software.ac.uk/}{Software Sustainability Institute}, UK} ---  \textit{Fellow 2016}  \hfill \textbf{2016--2017}
 \vspace{10pt}
 
 \textbf{\href{http://www.psy.ox.ac.uk/}{Department of Experimental Psychology}, University of Oxford, UK}
@@ -175,6 +176,9 @@
 \end{outerlist}
 
 \section{PUBLICATIONS}
+
+Love, B. C., \textbf{Guest, O.}, Slomka, P., Navarro, V., Wasserman, E. (2017). \href{https://mindmodeling.org/cogsci2017/papers/0283/index.html}{Deep Networks as Models of Human and Animal Categorization}. \textit{In Proceedings of the 39th Annual Meeting of	the	Cognitive Science	Society}. (pp. 1457--1458). 
+\vspace{5pt}
 
 \textbf{Guest, O.}, Love, B. C. (2017). \href{http://dx.d.oi.org/10.7554/eLife.21397}{What the Success of Brain Imaging Implies about the Neural Code}. \textit{eLife}, 6:e21397.
 \vspace{5pt}
@@ -225,6 +229,23 @@ Cooper, R. P., \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.cog
 \end{outerlist}
 
 \section{CONFERENCES}
+\textbf{\href{http://www.cognitivesciencesociety.org/conference/cogsci2017/}{ 39th Annual Meeting of the Cognitive Science Society (CogSci 2017)}}
+\begin{outerlist}
+\item[] \textit{London, UK}\hfill\textbf{26--29 Jul 2016}
+\begin{innerlist}
+\item Talk: \textit{Deep Networks as Models of Human and Animal Categorization}.
+\end{innerlist}
+\end{outerlist}
+\vspace{10pt}
+
+\textbf{\href{http://www.cogs.indiana.edu/asic/2017/index.shtml}{16th Annual Summer Interdisciplinary Conference (ASIC 2017)}}
+\begin{outerlist}
+\item[] \textit{Interlaken, Switzerland}\hfill\textbf{15--20 Jul 2017}
+\begin{innerlist}
+\item Talk: \textit{Deep Networks as Models of Human and Animal Categorization}.
+\end{innerlist}
+\end{outerlist}
+\vspace{10pt}
 
 \textbf{\href{http://www.cogs.indiana.edu/asic/2016/index.shtml}{15th Annual Summer Interdisciplinary Conference (ASIC 2016)}}
 \begin{outerlist}
