--- a/cv_olivia_guest.tex
+++ b/cv_olivia_guest.tex
@@ -200,6 +200,13 @@ Cooper, R. P., \textbf{Guest, O.} (2014).  \href{http://dx.doi.org/10.1016/j.cog
 
 \textbf{Guest, O.}, Cooper, R. P., Davelaar, E. J. (2012). \href{http://eprints.bbk.ac.uk/6758/}{Semantic Cognition: A Re-examination of the Recurrent Network ``Hub'' Model}. \textit{In Proceedings of the Ninth International Conference on Cognitive Modelling.} Berlin, Germany. April. (pp. 259--264). Berlin, Germany. April. Universit\"{a}tsverlag der TU Berlin.
 
+\section{PREPRINTS}
+
+Rougier, N. P., Hinsen, K., Alexandre, F., Arildsen, T., Barba, L., Benureau, F. C., ..., \textbf{Guest, O.}, ... \& Zito, T. (2017). \href{https://arxiv.org/abs/1707.04393}{Sustainable computational science: the ReScience initiative}. \textit{arXiv}.
+\vspace{5pt}
+
+\textbf{Guest, O.}, Love, B. C. (2016). \href{http://dx.doi.org/10.1101/071076}{What the Success of Brain Imaging Implies about the Neural Code}. \textit{bioRxiv}.    
+
 \section{EDUCATION}
 
 \textbf{\href{http://www.bbk.ac.uk/}{Birkbeck}, UK} \hfill \textbf{2010--2014}
