Update on Overleaf.

--- a/cv_olivia_guest.tex
+++ b/cv_olivia_guest.tex
@@ -1,6 +1,6 @@
 \documentclass[10pt]{article}
 \usepackage{fontspec} 
-\setmainfont{Lato}[Extension = .ttf,UprightFont = *-Regular, BoldFont = *-Bold, SmallCapsFont = *-Light, ItalicFont = *-Italic]
+\setmainfont{Lato}[Extension = .ttf,UprightFont = *-Light, BoldFont = *-Regular, SmallCapsFont = *-Light, ItalicFont = *-LightItalic]
 \usepackage{calc}
 \usepackage[english, greek]{babel}
 
