Update on Overleaf.

--- a/cv_olivia_guest.tex
+++ b/cv_olivia_guest.tex
@@ -180,7 +180,7 @@
 Love, B. C., \textbf{Guest, O.}, Slomka, P., Navarro, V., Wasserman, E. (2017). \href{https://mindmodeling.org/cogsci2017/papers/0283/index.html}{Deep Networks as Models of Human and Animal Categorization}. \textit{In Proceedings of the 39th Annual Meeting of	the	Cognitive Science	Society}. (pp. 1457--1458). 
 \vspace{5pt}
 
-\textbf{Guest, O.}, Love, B. C. (2017). \href{http://dx.d.oi.org/10.7554/eLife.21397}{What the Success of Brain Imaging Implies about the Neural Code}. \textit{eLife}, 6:e21397.
+\textbf{Guest, O.}, Love, B. C. (2017). \href{http://dx.doi.org/10.7554/eLife.21397}{What the Success of Brain Imaging Implies about the Neural Code}. \textit{eLife}, 6:e21397.
 \vspace{5pt}
 
 \textbf{Guest, O.}, Rougier, N. P. (2016). \href{http://oliviaguest.com/doc/guest_rougier_16.pdf}{What is computational reproducibility?} \textit{IEEE CIS Newsletter on Cognitive and Developmental Systems}, 13 (1).
