Update on Overleaf.

--- a/cv_olivia_guest.tex
+++ b/cv_olivia_guest.tex
@@ -320,7 +320,17 @@ Rougier, N. P., Hinsen, K., Alexandre, F., Arildsen, T., Barba, L., Benureau, F.
 \end{innerlist}
 \end{outerlist}
 
-\section{WORKSHOPS}
+\section{ORGANISING}
+
+\textbf{\href{https://scipy2017.scipy.org}{16th Scientific Computing with Python Conference (SciPy 2017)}}
+\begin{outerlist}
+\item[] \textit{Austin, Texas} \hfill \textbf{10--16 Jul 2017}
+\begin{innerlist}
+ \item \href{https://scipy2017.scipy.org/ehome/220975/493433/}{Chaired neuroscience mini-symposium} with \href{http://arokem.org/}{Ariel Rokem}.
+ \item Reviewed conference submissions.
+\end{innerlist}
+\end{outerlist}
+\vspace{10pt}
 
 \textbf{\href{http://www.software.ac.uk/rdvw/}{Research Data Visualisation Workshop (RDVW)}}
 \begin{outerlist}
